<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SonucActivity">

    <Button
        android:id="@+id/buttonBasaDon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekrar_oyna"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="75dp"
        android:layout_marginTop="50sp"
        android:textSize="20sp"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="350dp"
        app:srcCompat="@drawable/kazandiniz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/me" />

    <TextView
        android:id="@+id/sonucText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tebrikler_kazandiniz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonBasaDon"
        android:layout_marginBottom="50dp"
        app:layout_constraintEnd_toEndOf="parent"


        android:textSize="30sp" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="360dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="125dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>